--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.47.0",
     "react-router-dom": "^6.17.0",
+    "swiper": "^11.0.3",
     "zod": "^3.22.4"
   },
   "devDependencies": {
