--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.47.0",
+    "react-lazy-load-image-component": "^1.6.0",
     "react-router-dom": "^6.17.0",
     "swiper": "^11.0.3",
     "zod": "^3.22.4"
