--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
-{
+{  
+  "homepage": "https://patrickstar-code.github.io/StarShop",
   "name": "starshop",
   "private": true,
   "version": "0.0.0",
@@ -8,7 +9,11 @@
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "tailwind": "npx tailwindcss -i ./src/index.css -o ./dist/output.css --watch"
+    "tailwind": "npx tailwindcss -i ./src/index.css -o ./dist/output.css --watch",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
+
+
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.2",
